test/tests/compiler/16_characters_and_strings/invalid_parse/plx1_misplaced_string_literal.plx
pub fn main(none) i32 {
    a: i32 = 3
    return a"foo"
}
